--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "firebase-admin": "^13.6.0",
     "prettier": "^3.7.4",
     "typescript": "~5.9.2"
   },
