--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
+    "expo-font": "~14.0.10",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.11",
@@ -24,10 +25,12 @@
     "firebase": "^12.7.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
