--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,12 @@
   },
   "storage": {
     "rules": "firebase/storage.rules"
+  },
+  "functions": {
+    "source": "functions",
+    "predeploy": [
+      "pnpm --prefix \"$RESOURCE_DIR\" run build"
+    ]
   }
 }
 
